--- a/TekManager.csproj
+++ b/TekManager.csproj
@@ -33,8 +33,21 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="FSharp.Core, Version=4.5.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>packages\FSharp.Core.4.5.2\lib\net45\FSharp.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="HtmlAgilityPack, Version=1.7.4.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
+      <HintPath>packages\HtmlAgilityPack.1.7.4\lib\Net45\HtmlAgilityPack.dll</HintPath>
+    </Reference>
+    <Reference Include="ScrapySharp, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\ScrapySharp.3.0.0\lib\netstandard2.0\ScrapySharp.dll</HintPath>
+    </Reference>
+    <Reference Include="ScrapySharp.Core, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\ScrapySharp.3.0.0\lib\netstandard2.0\ScrapySharp.Core.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Caching" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
@@ -50,6 +63,11 @@
   <ItemGroup>
     <Compile Include="Code\Connection\DataServiceHelper.cs" />
     <Compile Include="Code\Connection\Logger.cs" />
+    <Compile Include="Code\EbayScraper\EbayInitialScrapeData.cs" />
+    <Compile Include="Code\EbayScraper\EbayItem.cs" />
+    <Compile Include="Code\EbayScraper\EbayItemRepository.cs" />
+    <Compile Include="Code\EbayScraper\EbayScraper.cs" />
+    <Compile Include="Code\EbayScraper\EbayStatsProvider.cs" />
     <Compile Include="Code\Result\Failure.cs" />
     <Compile Include="Code\Result\Result.cs" />
     <Compile Include="Code\Result\ResultExtensions.cs" />
@@ -84,6 +102,24 @@
     <Compile Include="Controls\ProductRequestsControl.Designer.cs">
       <DependentUpon>ProductRequestsControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\AddProduct.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\AddProduct.Designer.cs">
+      <DependentUpon>AddProduct.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\EbayPriceFinder.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\EbayPriceFinder.Designer.cs">
+      <DependentUpon>EbayPriceFinder.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\EditProduct.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\EditProduct.Designer.cs">
+      <DependentUpon>EditProduct.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -110,6 +146,15 @@
     <EmbeddedResource Include="Controls\ProductRequestsControl.resx">
       <DependentUpon>ProductRequestsControl.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\AddProduct.resx">
+      <DependentUpon>AddProduct.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\EbayPriceFinder.resx">
+      <DependentUpon>EbayPriceFinder.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\EditProduct.resx">
+      <DependentUpon>EditProduct.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -135,6 +180,12 @@
     <None Include="Connected Services\DataService\TekManager.DataService.CreateResetEmailRequestResponse.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
+    <None Include="Connected Services\DataService\TekManager.DataService.GetActiveProductsByPartialResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Connected Services\DataService\TekManager.DataService.GetMembersByEmailOrIdResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
     <None Include="Connected Services\DataService\TekManager.DataService.GetProductsByPageResponse.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
@@ -147,6 +198,9 @@
     <None Include="Connected Services\DataService\TekManager.DataService.LoginResponse.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
+    <None Include="Connected Services\DataService\TekManager.DataService.MemberSqlModel.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
     <None Include="Connected Services\DataService\TekManager.DataService.ProductSqlModel.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
@@ -156,6 +210,10 @@
     <None Include="Connected Services\DataService\TekManager.DataService.ResetPasswordResponse.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
+    <None Include="Connected Services\DataService\TekManager.DataService.SaveProductResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
