--- a/TekManager.csproj
+++ b/TekManager.csproj
@@ -96,11 +96,11 @@
     <Compile Include="Controls\PaymentsControl.Designer.cs">
       <DependentUpon>PaymentsControl.cs</DependentUpon>
     </Compile>
-    <Compile Include="Controls\ProductRequestsControl.cs">
+    <Compile Include="Controls\SellRequestsControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Controls\ProductRequestsControl.Designer.cs">
-      <DependentUpon>ProductRequestsControl.cs</DependentUpon>
+    <Compile Include="Controls\SellRequestsControl.Designer.cs">
+      <DependentUpon>SellRequestsControl.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\AddProduct.cs">
       <SubType>Form</SubType>
@@ -119,6 +119,12 @@
     </Compile>
     <Compile Include="Forms\EditProduct.Designer.cs">
       <DependentUpon>EditProduct.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\ViewSellRequest.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\ViewSellRequest.Designer.cs">
+      <DependentUpon>ViewSellRequest.cs</DependentUpon>
     </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
@@ -143,8 +149,8 @@
     <EmbeddedResource Include="Controls\PaymentsControl.resx">
       <DependentUpon>PaymentsControl.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Controls\ProductRequestsControl.resx">
-      <DependentUpon>ProductRequestsControl.cs</DependentUpon>
+    <EmbeddedResource Include="Controls\SellRequestsControl.resx">
+      <DependentUpon>SellRequestsControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\AddProduct.resx">
       <DependentUpon>AddProduct.cs</DependentUpon>
@@ -154,6 +160,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\EditProduct.resx">
       <DependentUpon>EditProduct.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\ViewSellRequest.resx">
+      <DependentUpon>ViewSellRequest.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
@@ -183,6 +192,12 @@
     <None Include="Connected Services\DataService\TekManager.DataService.GetActiveProductsByPartialResponse.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
+    <None Include="Connected Services\DataService\TekManager.DataService.GetAllProductNamesAndIdsResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Connected Services\DataService\TekManager.DataService.GetAllSellRequestsResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
     <None Include="Connected Services\DataService\TekManager.DataService.GetMembersByEmailOrIdResponse.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
@@ -193,6 +208,9 @@
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
     <None Include="Connected Services\DataService\TekManager.DataService.GetProductsResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Connected Services\DataService\TekManager.DataService.GetSellRequestsByMemberIdResponse.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
     <None Include="Connected Services\DataService\TekManager.DataService.LoginResponse.datasource">
@@ -211,6 +229,15 @@
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
     <None Include="Connected Services\DataService\TekManager.DataService.SaveProductResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Connected Services\DataService\TekManager.DataService.SaveSellProductRequestResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Connected Services\DataService\TekManager.DataService.SellRequestSqlModel.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Connected Services\DataService\TekManager.DataService.UpdateSellRequestStatusAndReasonResponse.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
     <None Include="packages.config" />
