added blog stuff

--- a/App.config
+++ b/App.config
@@ -6,7 +6,7 @@
     <system.serviceModel>
         <bindings>
             <basicHttpBinding>
-                <binding name="DataServiceSoap">
+                <binding name="DataServiceSoap" maxReceivedMessageSize = "1000000">
                     <security mode="Transport" />
                 </binding>
                 <binding name="DataServiceSoap1" />
